[workspace]
resolver = "2"
members = [
    "aulos",
    "aulos-macro",
    "aulos-macro-internal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
syn = { version = "2.0", default-features = false }
