[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aulos"
description = "lib for music theory"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = "==3.12.*"
dependencies = [
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "mypy"
]

[tool.setuptools]
package-dir = { "" = "src" }