[build-system]
requires = [
    "setuptools",
    "setuptools_scm",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "aulos"
description = "Python library for speech processing and analysis from a music theory perspective."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dynamic = [
    "version"
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
]

[project.urls]
Homepage = "https://github.com/Oujox/aulos"
Repository = "https://github.com/Oujox/aulos"

[project.scripts]
aulos = "aulos.__main__:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools_scm]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
