[project]
name = "aulos"
description = "Aulos is a Python library for flexible music theory objects and tuning systems."
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.12"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Oujox/aulos"
Repository = "https://github.com/Oujox/aulos"

[project.scripts]
aulos = "aulos.__main__:main"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff==0.11.13",
    "ty>=0.0.1a21",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { git = { commit = true, tags = true } },
]

[tool.ruff]
exclude = ["tests"]
line-length = 120
indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D", 
    "ANN401",
    "COM812",
    "TID252", 
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[tool.ty.src]
exclude = ["tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
